// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BackBar supports brand color 1`] = `
<div>
  <div
    className="BackBar BackBar--color-red"
  >
    <a
      href={undefined}
    >
      <svg
        className="BackBar__arrow"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <rect
            className="BackBar__arrow-back"
            height="18"
            rx="2"
            width="18"
          />
          <path
            d="M15.715215,9.67002437 C16.0969496,9.29253227 16.0939089,8.67853807 15.7121731,8.30258285 L9.55867891,2.24158095 C8.82411406,1.50934734 7.72454442,2.60694484 8.45759085,3.33917457 L13.0809849,7.94634327 C13.2330683,8.09946147 13.1828826,8.22377469 12.9684427,8.22377469 L2.77867689,8.22377469 C2.34826324,8.22377469 2,8.57094432 2,8.99998035 C2,9.42901639 2.34827492,9.77618601 2.77867689,9.77618601 L12.9684427,9.77618601 C13.1844049,9.77618601 13.2361129,9.89746815 13.0809849,10.0521038 L8.45759085,14.660825 C7.72454442,15.3930586 8.82411795,16.4906522 9.55867891,15.7584186 L15.715215,9.67002437 Z"
            fill="#FFF"
            fillRule="nonzero"
            transform="matrix(-1 0 0 1 18 0)"
          />
        </g>
      </svg>
      Support
    </a>
  </div>
  <div
    className="BackBar BackBar--color-green"
  >
    <a
      href={undefined}
    >
      <svg
        className="BackBar__arrow"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <rect
            className="BackBar__arrow-back"
            height="18"
            rx="2"
            width="18"
          />
          <path
            d="M15.715215,9.67002437 C16.0969496,9.29253227 16.0939089,8.67853807 15.7121731,8.30258285 L9.55867891,2.24158095 C8.82411406,1.50934734 7.72454442,2.60694484 8.45759085,3.33917457 L13.0809849,7.94634327 C13.2330683,8.09946147 13.1828826,8.22377469 12.9684427,8.22377469 L2.77867689,8.22377469 C2.34826324,8.22377469 2,8.57094432 2,8.99998035 C2,9.42901639 2.34827492,9.77618601 2.77867689,9.77618601 L12.9684427,9.77618601 C13.1844049,9.77618601 13.2361129,9.89746815 13.0809849,10.0521038 L8.45759085,14.660825 C7.72454442,15.3930586 8.82411795,16.4906522 9.55867891,15.7584186 L15.715215,9.67002437 Z"
            fill="#FFF"
            fillRule="nonzero"
            transform="matrix(-1 0 0 1 18 0)"
          />
        </g>
      </svg>
      What's on
    </a>
  </div>
  <div
    className="BackBar BackBar--color-blue"
  >
    <a
      href={undefined}
    >
      <svg
        className="BackBar__arrow"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <rect
            className="BackBar__arrow-back"
            height="18"
            rx="2"
            width="18"
          />
          <path
            d="M15.715215,9.67002437 C16.0969496,9.29253227 16.0939089,8.67853807 15.7121731,8.30258285 L9.55867891,2.24158095 C8.82411406,1.50934734 7.72454442,2.60694484 8.45759085,3.33917457 L13.0809849,7.94634327 C13.2330683,8.09946147 13.1828826,8.22377469 12.9684427,8.22377469 L2.77867689,8.22377469 C2.34826324,8.22377469 2,8.57094432 2,8.99998035 C2,9.42901639 2.34827492,9.77618601 2.77867689,9.77618601 L12.9684427,9.77618601 C13.1844049,9.77618601 13.2361129,9.89746815 13.0809849,10.0521038 L8.45759085,14.660825 C7.72454442,15.3930586 8.82411795,16.4906522 9.55867891,15.7584186 L15.715215,9.67002437 Z"
            fill="#FFF"
            fillRule="nonzero"
            transform="matrix(-1 0 0 1 18 0)"
          />
        </g>
      </svg>
      Latest news
    </a>
  </div>
</div>
`;

exports[`Storyshots BackBar with text 1`] = `
<div
  className="BackBar BackBar--color-blue"
>
  <a
    href={undefined}
  >
    <svg
      className="BackBar__arrow"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <rect
          className="BackBar__arrow-back"
          height="18"
          rx="2"
          width="18"
        />
        <path
          d="M15.715215,9.67002437 C16.0969496,9.29253227 16.0939089,8.67853807 15.7121731,8.30258285 L9.55867891,2.24158095 C8.82411406,1.50934734 7.72454442,2.60694484 8.45759085,3.33917457 L13.0809849,7.94634327 C13.2330683,8.09946147 13.1828826,8.22377469 12.9684427,8.22377469 L2.77867689,8.22377469 C2.34826324,8.22377469 2,8.57094432 2,8.99998035 C2,9.42901639 2.34827492,9.77618601 2.77867689,9.77618601 L12.9684427,9.77618601 C13.1844049,9.77618601 13.2361129,9.89746815 13.0809849,10.0521038 L8.45759085,14.660825 C7.72454442,15.3930586 8.82411795,16.4906522 9.55867891,15.7584186 L15.715215,9.67002437 Z"
          fill="#FFF"
          fillRule="nonzero"
          transform="matrix(-1 0 0 1 18 0)"
        />
      </g>
    </svg>
    Hello Button
  </a>
</div>
`;

exports[`Storyshots ContentCard with text 1`] = `
<div
  className="ContentCard"
>
  Hello Content!
</div>
`;

exports[`Storyshots ContentNavigation default 1`] = `
<div
  className="NavigationCard"
>
  <h3
    className="NavigationCard__title"
  >
    Navigation
  </h3>
  <ul
    className="NavigationCard__list"
  >
    <li
      className="NavigationCard__item"
    >
      <a
        className="NavigationCard__anchor"
        href="#animals"
      >
        Animals
      </a>
    </li>
    <li
      className="NavigationCard__item NavigationCard__item--active"
    >
      <a
        className="NavigationCard__anchor"
        href="#boats"
      >
        Boats
      </a>
    </li>
    <li
      className="NavigationCard__item"
    >
      <a
        className="NavigationCard__anchor"
        href="#cars"
      >
        Cars
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots HeadingHero title only 1`] = `
<div
  className="Container"
>
  <div
    className="TEST_IMAGE"
    data-props="/images/4219b2966c1047dd8fe4bfa2aa922c72.original.jpg"
  >
    <h1
      className="HeadingImage__title"
    >
      Our holiday opening times
    </h1>
  </div>
</div>
`;

exports[`Storyshots HeadingHero width description 1`] = `
<div
  className="Container"
>
  <div
    className="TEST_IMAGE"
    data-props="/images/4219b2966c1047dd8fe4bfa2aa922c72.original.jpg"
  >
    <h1
      className="HeadingImage__title"
    >
      Beware of seagulls
    </h1>
    <div>
      <div
        className="HeadingImage__desc"
      >
        They are everywhere. They will get you.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Loader dark 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#333333",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="RippleLoader"
  >
    <div
      style={
        Object {
          "borderColor": "#fff",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Loader light 1`] = `
<div
  className="RippleLoader"
>
  <div
    style={
      Object {
        "borderColor": "#000",
      }
    }
  />
</div>
`;

exports[`Storyshots NewsBlock with image 1`] = `
<li
  className="NewsGrid__item NewsBlock"
>
  <a
    className="NewsBlock__link"
    href="https://example.com"
  >
    <div
      className="NewsBlock__image"
    >
      <div
        className="u-responsive-ratio u-responsive-ratio--wide"
      >
        <img
          alt=""
          src="https://www.sussexstudent.com/asset/News/6013/Lucy.jpg"
        />
      </div>
    </div>
    <div
      className="NewsBlock__content"
    >
      <div
        className="NewsBlock__title-link"
      >
        <h2
          className="NewsBlock__title"
        >
          Union launch week of meta headlines for styleguide
        </h2>
      </div>
      <p
        className="NewsBlock__standfirst"
      >
        A small sentence or two about the news article
      </p>
      <div
        className="NewsBlock__meta"
      >
        <date
          className="NewsBlock__date"
        >
          Today
        </date>
      </div>
    </div>
  </a>
</li>
`;

exports[`Storyshots NewsBlock without image 1`] = `<div />`;
